force-app/main/default/objects/Booking_Event__e/fields/Cash_Paid__c.field-meta.xml
<CustomField>
    <fullName>Cash_Paid__c</fullName>
    <label>Cash Paid</label>
    <type>Text</type>
    <length>50</length>
</CustomField>