force-app/main/default/objects/Booking_Event__e/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <type>Text</type>
    <length>255</length>
</CustomField>