force-app/main/default/objects/Booking_Event__e/fields/Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Iso_Code__c</fullName>
    <label>Currency ISO Code</label>
    <type>Text</type>
    <length>3</length>
</CustomField>