force-app/main/default/objects/Booking_Event__e/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <type>Text</type>
    <length>100</length>
</CustomField>