force-app/main/default/objects/Booking_Event__e/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <type>Text</type>
    <length>100</length>
</CustomField>