force-app/main/default/objects/Booking_Event__e/fields/External_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Transaction_Number__c</fullName>
    <label>External Transaction Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>