force-app/main/default/objects/Booking_Event__e/fields/Journal_Sub_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Journal_Sub_Type_Name__c</fullName>
    <label>Journal Sub Type Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>