force-app/main/default/objects/Booking_Event__e/fields/Journal_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Journal_Type_Name__c</fullName>
    <label>Journal Type Name</label>
    <type>Text</type>
    <length>50</length>
</CustomField>