force-app/main/default/objects/Booking_Event__e/fields/Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay__c</fullName>
    <label>Length of Stay</label>
    <type>Text</type>
    <length>10</length>
</CustomField>