force-app/main/default/objects/Booking_Event__e/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>Line of Business</label>
    <type>Text</type>
    <length>50</length>
</CustomField>