force-app/main/default/objects/Booking_Event__e/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>