force-app/main/default/objects/Booking_Event__e/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <label>Partner Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>