force-app/main/default/objects/Booking_Event__e/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>