force-app/main/default/objects/Booking_Event__e/fields/Points_to_Redeem__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Redeem__c</fullName>
    <label>Points to Redeem</label>
    <type>Text</type>
    <length>50</length>
</CustomField>